--- a/14-Playback-Controllers.Rmd
+++ b/14-Playback-Controllers.Rmd
@@ -5,20 +5,20 @@ Cues and Scenes are played back using the 15 **Motorized Slider Controllers**, n
 
 **The following is covered in this chapter:**
 
-- [14.1. Controller Priority Logic](#14.1.ControllerPriorityLogic)
-- [14.2. Controller Overview](#14.2.ControllerOverview)
-- [14.3. Master Controller](#14.3.MasterController)
-- [14.4. GOTO and LOAD](#14.4.GOTOandLOAD)
-- [14.5. Configuring Controllers](#14.5.ConfiguringControllers)
-- [14.6. Controller Color Codes](#14.6.ControllerColorCodes)
-- [14.7. Working With controllers](#14.7.WorkingWithcontrollers)
-- [14.8. Controller Release and Free](#14.8.ControllerReleaseandFree)
-- [14.9. Controller Qlist Properties](#14.9.ControllerQlistProperties)
-- [14.10. Controller Modes](#14.10.ControllerModes)
-- [14.11. Rate and Teach Keys](#14.11.RateandTeachKeys)
+- [14.1. Controller Priority Logic](#ControllerPriorityLogic-14.1.)
+- [14.2. Controller Overview](#ControllerOverview-14.2.)
+- [14.3. Master Controller](#MasterController-14.3.)
+- [14.4. GOTO and LOAD](#GOTOandLOAD-14.4.)
+- [14.5. Configuring Controllers](#ConfiguringControllers-14.5.)
+- [14.6. Controller Color Codes](#ControllerColorCodes-14.6.)
+- [14.7. Working With controllers](#WorkingWithcontrollers-14.7.)
+- [14.8. Controller Release and Free](#ControllerReleaseandFree-14.8.)
+- [14.9. Controller Qlist Properties](#ControllerQlistProperties-14.9.)
+- [14.10. Controller Modes](#ControllerModes-14.10.)
+- [14.11. Rate and Teach Keys](#RateandTeachKeys-14.11.)
 
 
-## Controller Priority Logic {#14.1.ControllerPriorityLogic}
+## Controller Priority Logic {#ControllerPriorityLogic-14.1.}
 
 
 
@@ -53,7 +53,7 @@ OR
 
 
 
-## Controller Overview {#14.2.ControllerOverview}
+## Controller Overview {#ControllerOverview-14.2.}
 
 **Controllers are used to playback or execute a number of objects:**
 
@@ -122,7 +122,7 @@ OR
 
 
 
-## Master Controller {#14.3.MasterController}
+## Master Controller {#MasterController-14.3.}
 
 **Master Controller:**
 
@@ -143,7 +143,7 @@ OR
 
 
 
-## GOTO and LOAD {#14.4.GOTOandLOAD}
+## GOTO and LOAD {GOTOandLOAD-14.4.}
 
 GOTO and LOAD are used to crossfade to cues out of sequence. By default, GOTO immediately transitions to the specified cue in the system **GOTO Time**. LOAD preloads controllers. The next [GO] will transition to the preloaded cue in **Cue Time**.
 
@@ -226,7 +226,7 @@ GOTO and LOAD are used to crossfade to cues out of sequence. By default, GOTO im
 
 
 
-## Configuring Controllers {#14.5.ConfiguringControllers}
+## Configuring Controllers {#ConfiguringControllers-14.5.}
 
 Controller buttons and sliders may be customized to allow maximum flexibility. When Qlists and Scenes are initially assigned to Controllers, the buttons are configured as per the **System Settings defaults** for Controller and Controller Action. Defaults are accessed by tapping the System Status area at the far right side of the controller display.
 
@@ -267,7 +267,7 @@ Controller buttons and sliders may be customized to allow maximum flexibility. W
 
 
 
-## Controller Color Codes {#14.6.ControllerColorCodes}
+## Controller Color Codes {#ControllerColorCodes-14.6.}
 
 
 
@@ -284,7 +284,7 @@ Controller buttons and sliders may be customized to allow maximum flexibility. W
 
 
 
-## Working With controllers {#14.7.WorkingWithcontrollers}
+## Working With controllers {#WorkingWithcontrollers-14.7.}
 
 **Controller types:** - Detailed
 
@@ -367,7 +367,7 @@ Controller buttons and sliders may be customized to allow maximum flexibility. W
 -   See: [14.8. Controller Release and Free](https://vibemanual.compulite.com/playing-back-cues-and-scenes.html#controller-release-and-free)
 
 
-## Controller Release and Free {#14.8.ControllerReleaseandFree}
+## Controller Release and Free {#ControllerReleaseandFree-14.8.}
 
 
 
@@ -406,7 +406,7 @@ Controller buttons and sliders may be customized to allow maximum flexibility. W
 -   [VIBE] + [FREE]
 
 
-## Controller Qlist Properties {#14.9.ControllerQlistProperties}
+## Controller Qlist Properties {#ControllerQlistProperties-14.9.}
 
 
 
@@ -423,7 +423,7 @@ By default, the first incident of a Qlist being assigned to a controller will ta
 
 
 
-## Controller Modes {#14.10.ControllerModes}
+## Controller Modes {#ControllerModes-14.10.}
 
 
 
@@ -442,7 +442,7 @@ The Controller Mode keys are located at the far left of the console beside the m
 -    <span style="color:Gray">[PROTECT] - When implemented, must be held down before any of the fader modes may be changed.</span>
 
 
-## Rate and Teach Keys {#14.11.RateandTeachKeys}
+## Rate and Teach Keys {#RateandTeachKeys-14.11.}
 
 
 
