--- a/10-Programming-Cues-and-Scenes.Rmd
+++ b/10-Programming-Cues-and-Scenes.Rmd
@@ -4,24 +4,24 @@ This chapter deals with storing and editing Editor values.
 
 **The following is covered in this chapter:**
 
-- [10.1. What Are Qlists, Cues, Scenes, and Submasters?](#10.1.WhatAreQlists-Cues-Scenes-andSubmasters?)
-- [10.2. Tracking Principals](#10.2.TrackingPrincipals)
-- [10.3. Storing Cues and Scenes Directly to Controllers](#10.3.StoringCuesandScenesDirectlytoControllers)
-- [10.4. Master Controller](#10.4.MasterController)
-- [10.5. Storing Cues to the Master Controller](#10.5.StoringCuestotheMasterController)
-- [10.6. Storing Qlist Cues to any Controller](#10.6.StoringQlistCuestoanyController)
-- [10.7. Cue Store Options](#10.7.CueStoreOptions)
-- [10.8. Assigning Text Labels](#10.8.AssigningTextLabels)
-- [10.9. Modifying Cues and Scenes](#10.9.ModifyingCuesandScenes)
-- [10.10. Creating New Cues from Existing Cue Data](#10.10.CreatingNewCuesfromExistingCueData)
-- [10.11. Cue Time Properties](#10.11.CueTimeProperties)
-- [10.12. Additional Cue Properties](#10.12.AdditionalCueProperties)
-- [10.13. Parameter Time](#10.13.ParameterTime)
-- [10.14. Parameter Profile](#10.14.ParameterProfile)
-- [10.15.  Group Submasters](#10.15.GroupSubmasters)
+- [10.1. What Are Qlists, Cues, Scenes, and Submasters?](#WhatAreQlists-Cues-Scenes-andSubmasters-10.1.)
+- [10.2. Tracking Principals](#TrackingPrincipals-10.2.)
+- [10.3. Storing Cues and Scenes Directly to Controllers](#StoringCuesandScenesDirectlytoControllers-10.3.)
+- [10.4. Master Controller](#MasterController-10.4.)
+- [10.5. Storing Cues to the Master Controller](#StoringCuestotheMasterController-10.5.)
+- [10.6. Storing Qlist Cues to any Controller](#StoringQlistCuestoanyController-10.6.)
+- [10.7. Cue Store Options](#CueStoreOptions-10.7.)
+- [10.8. Assigning Text Labels](#AssigningTextLabels-10.8.)
+- [10.9. Modifying Cues and Scenes](#ModifyingCuesandScenes-10.9.)
+- [10.10. Creating New Cues from Existing Cue Data](#CreatingNewCuesfromExistingCueData-10.10.)
+- [10.11. Cue Time Properties](#CueTimeProperties-10.11.)
+- [10.12. Additional Cue Properties](#AdditionalCueProperties-10.12.)
+- [10.13. Parameter Time](#ParameterTime-10.13.)
+- [10.14. Parameter Profile](#ParameterProfile-10.14.)
+- [10.15.  Group Submasters](#GroupSubmasters-10.15.)
 
 
-## What Are Qlists, Cues, Scenes, and Submasters? {#10.1.WhatAreQlists-Cues-Scenes-andSubmasters?}
+## What Are Qlists, Cues, Scenes, and Submasters? {WhatAreQlists-Cues-Scenes-andSubmasters-10.1.}
 
 
 **Qlists:**
@@ -83,7 +83,7 @@ Submasters:
 
 
 
-## Tracking Principals {#10.2.TrackingPrincipals}
+## Tracking Principals {#TrackingPrincipals-10.2.}
 
 
 
@@ -139,7 +139,7 @@ Vibe uses the **Tracking/Move Fade** philosophy common in most current lighting 
 
 
 
-## Storing Cues and Scenes Directly to Controllers {#10.3.StoringCuesandScenesDirectlytoControllers}
+## Storing Cues and Scenes Directly to Controllers {#StoringCuesandScenesDirectlytoControllers-10.3.}
 
 
 **Cues and Scenes may be stored:**
@@ -179,7 +179,7 @@ Vibe uses the **Tracking/Move Fade** philosophy common in most current lighting 
 2. The Store to Controller pop-up will appear. Tap {Create a new Qlist} the Scene will be assigned the first available Qlist with the Scene's look being converted to Cue 1.
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FqjIYoECGpKkw2eosYT1W%2F10.3.webp?alt=media&token=92e2fb56-797e-4596-869b-0e1c042b9e01)
 
-## Master Controller {#10.4.MasterController}
+## Master Controller {#MasterController-10.4.}
 
 
 In Vibe, at least one controller must be assigned as the [SELECT] controller. This controller will now be linked to the Master Controller.
@@ -214,7 +214,7 @@ By default cues that do not have a Qlist or Controller specified in their destin
 
 
 
-## Storing Cues to the Master Controller {#10.5.StoringCuestotheMasterController}
+## Storing Cues to the Master Controller {#StoringCuestotheMasterController-10.5.}
 
 >A Qlist must be assigned to the [SELECT] controller before cues can be stored using theatre style keypad syntax
 
@@ -245,7 +245,7 @@ By default cues that do not have a Qlist or Controller specified in their destin
 
 
 
-## Storing Qlist Cues to any Controller {#10.6.StoringQlistCuestoanyController}
+## Storing Qlist Cues to any Controller {#StoringQlistCuestoanyController-10.6.}
 
 ><span style="color:Red">The destination Qlist must be assigned to a controller in advance or after storing the first Cue, the destination Qlist will bump the current cue on the Master Controller out and replace it.</span>.
 
@@ -264,7 +264,7 @@ By default cues that do not have a Qlist or Controller specified in their destin
 
 
 
-## Cue Store Options {#10.7.CueStoreOptions}
+## Cue Store Options {#CueStoreOptions-10.7.}
 
 In the process of storing a cue, a number of filters and settings are available. 
 
@@ -326,7 +326,7 @@ In the process of storing a cue, a number of filters and settings are available.
 
 
 
-## Assigning Text Labels {#10.8.AssigningTextLabels}
+## Assigning Text Labels {#AssigningTextLabels-10.8.}
 
 **Assign a Text Label to a Qlist:**
 
@@ -357,7 +357,7 @@ In the process of storing a cue, a number of filters and settings are available.
 
 
 
-## Modifying Cues and Scenes {#10.9.ModifyingCuesandScenes}
+## Modifying Cues and Scenes {#ModifyingCuesandScenes-10.9.}
 
 **Modify a Cue or Scene using [UPDATE]:**
 
@@ -478,7 +478,7 @@ Cue Settings pop-up
 
 
 
-## Creating New Cues from Existing Cue Data {#10.10.CreatingNewCuesfromExistingCueData}
+## Creating New Cues from Existing Cue Data {#CreatingNewCuesfromExistingCueData-10.10.}
 
 **To Copy a Cue to a new Cue:**
 
@@ -520,7 +520,7 @@ Cue Settings pop-up
 
 
 
-## Cue Time Properties {#10.11.CueTimeProperties}
+## Cue Time Properties {#CueTimeProperties-10.11.}
 
 **Cue Time Properties:**
 
@@ -631,7 +631,7 @@ Alternately times can be randomly entering by tapping the desired time field and
 >To clear a Follow, turn the physical Follow Wheel until its display and the {Follow} display say N/A Press [ENTER}
 
 
-## Additional Cue Properties {#10.12.AdditionalCueProperties}
+## Additional Cue Properties {#AdditionalCueProperties-10.12.}
 
 Additional Cue Properties:
 
@@ -807,7 +807,7 @@ In many consoles, the only way to create a loop is to create a link from the end
 
 
 
-## Parameter Time {#10.13.ParameterTime}
+## Parameter Time {#ParameterTime-10.13.}
 
 
 **Parameter Time:**
@@ -1018,7 +1018,7 @@ To Set Fan Cell Time:
 ![](https://files.gitbook.com/v0/b/gitbook-x-prod.appspot.com/o/spaces%2F3kS90tLsADGm1ocbe7q9%2Fuploads%2FYEcjecqiWJTijSC3aOss%2Fimage.png?alt=media&token=85286838-edf2-4ba4-9bb8-f6263938dca5)
 
 
-## Parameter Profile {#10.14.ParameterProfile}
+## Parameter Profile {#ParameterProfile-10.14.}
 
 Profile determine a parameter's behavior during a fade.
 Profiles are always relative to the fade time.
@@ -1054,7 +1054,7 @@ User may apply the popup with nothing selected on the options or with all the op
 
 
 
-## Group Submasters {#10.15.GroupSubmasters}
+## Group Submasters {#GroupSubmasters-10.15.}
 
 
 **Group Submasters:**
