--- a/17-Snaps.Rmd
+++ b/17-Snaps.Rmd
@@ -5,12 +5,12 @@ This chapter deals with creating and triggering Snapshots.
 
 **The following is covered in this chapter:**
 
-- [17.1. Storing Snaps](#17.1.StoringSnaps)
-- [17.2. Triggering Snap](#17.2.TriggeringSnap)
-- [17.3. Attaching Snaps](#17.3.AttachingSnaps)
+- [17.1. Storing Snaps](#StoringSnaps-17.1.)
+- [17.2. Triggering Snap](#TriggeringSnap-17.2.)
+- [17.3. Attaching Snaps](#AttachingSnaps-17.3.)
 
 
-## Storing Snaps {#17.1.StoringSnaps}
+## Storing Snaps {#StoringSnaps-17.1.}
 
 
 
@@ -57,7 +57,7 @@ Or
 
 
 
-## Triggering Snap {#17.2.TriggeringSnap}
+## Triggering Snap {#TriggeringSnap-17.2.}
 
 
 
@@ -112,7 +112,7 @@ Snaps may be assigned a time to "smooth" out their transitions.
 -   Exclude from Override - Even if recorded in a Snap, the controller will ignore Snap activation instructions.
 
 
-## Attaching Snaps {#17.3.AttachingSnaps}
+## Attaching Snaps {#AttachingSnaps-17.3.}
 
 Snaps may be attached and triggered from Qlist Cues.
 
