--- a/18-Exam-show-data.Rmd
+++ b/18-Exam-show-data.Rmd
@@ -7,11 +7,11 @@ Virtually all Vibe show data can be viewed using the **Exam** display. The Exam 
 
 **The following is covered in this chapter:**
 
-- [18.1. Show Exam](#18.1.ShowExam)
-- [18.2. Patch Exam](#18.2.PatchExam)
+- [18.1. Show Exam](#ShowExam-18.1.)
+- [18.2. Patch Exam](#)
 
 
-## Show Exam {#18.1.ShowExam}
+## Show Exam {#ShowExam-18.1.}
 
 
 
@@ -83,7 +83,7 @@ Virtually all Vibe show data can be viewed using the **Exam** display. The Exam 
 
 
 
-## Patch Exam {#18.2.PatchExam}
+## Patch Exam {#PatchExam-18.2.}
 
 
 **The Patch Exam Menu has 6 items:**
